--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 h1 {
-    color: rgb(22, 151, 156);
+    color: #7ea3e2;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 350%;
     text-align: center;
@@ -34,11 +34,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+    background-color:  rgb(11, 70, 97);
 }
 
 .active {
-    background-color: rgb(22, 151, 156);
+    background-color: #7ea3e2;
 }
 
 
