--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,11 @@
   h3 {
     text-align: center; margin-bottom: 0;
   }
-  #mapid { 
-      height: 180px; 
-    }
+
+  .container {
+    padding: 1em;
+  }
+
+  .map {
+    height: 400px; 
+  }
