--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<h3>Map Data</h3>
-
-<div id="mapid"></div>
-
-<app-data-search></app-data-search>
+<div class="container">
+    <div class="map" id="leafletmap" >
+    </div>
+</div>
