--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -65,3 +65,11 @@ li a:hover:not(.active) {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  @media screen and (min-width: 0px) and (max-width: 400px) {
+    #my-content { display: none; }  /* show it on small screens */
+  }
+  
+  @media screen and (min-width: 401px) and (max-width: 1024px) {
+    #my-content { display: none; }   /* hide it elsewhere */
+  }
