--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
-<h1>{{title}}<span class="grey">{{title2}}</span> {{title3}}</h1>
-<div class="navbar">
-<ul>
-    <li><a class="active" routerLink="/dashboard">Dashboard</a></li>
-    <li><a routerLink="/data">Data</a></li>
-  </ul>
+<div id="my_content">
+  <h1>{{title}}<span class="grey">{{title2}}</span> {{title3}}</h1>
+  <div class="navbar">
+    <ul>
+      <li>
+        <a class="active" routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li>
+        <a routerLink="/data">Data</a>
+      </li>
+    </ul>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
