--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="is_data">
+    <a routerLink="/detail/{{link}}">{{link}}</a>
+</div>
+
 <div class="container">
     <div class="map" id="leafletmap" >
     </div>
