--- a/src/app/data-detail/data-detail.component.html
+++ b/src/app/data-detail/data-detail.component.html
@@ -1,13 +1,7 @@
 <div *ngIf="data">
-
-  <h2>{{ data.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{data.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="data.name" placeholder="name"/>
-    </label>
-  </div>
-
+  <h2>{{ name | uppercase }} Details</h2>
 </div>
 
-<button (click)="goBack()">go back</button>
+<app-chart></app-chart>
+
+<button class="back" (click)="goBack()">go back</button>
