--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <li>
         <a routerLink="/data">Data</a>
       </li>
+      <app-data-search></app-data-search>
     </ul>
   </div>
 </div>
