--- a/src/app/data-detail/data-detail.component.css
+++ b/src/app/data-detail/data-detail.component.css
@@ -1,30 +1,25 @@
-/* HeroDetailComponent's private CSS styles */
-label {
-    display: inline-block;
-    width: 3em;
-    margin: .5em 0;
-    color: #607D8B;
-    font-weight: bold;
-}
-input {
-    height: 2em;
-    font-size: 1em;
-    padding-left: .4em;
-}
 button {
-    margin-top: 20px;
     font-family: Arial;
-    background-color: #eee;
+    background-color: #7ea3e2;
     border: none;
-    padding: 5px 10px;
     border-radius: 4px;
     cursor: pointer; cursor: hand;
+    padding: 1em;
+    margin-left: 3em;
 }
+
 button:hover {
-    background-color: #cfd8dc;
+    background-color: rgb(11, 70, 97);
+    color: white;
 }
 button:disabled {
     background-color: #eee;
     color: #ccc;
     cursor: auto;
 }
+
+h2 {
+    text-align: center; margin-bottom: 0;
+    color:rgb(11, 70, 97);
+}
+
