--- a/src/app/data-search/data-search.component.css
+++ b/src/app/data-search/data-search.component.css
@@ -3,8 +3,10 @@
     border-bottom: 1px solid gray;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
+    /*
     width:195px;
     height: 16px;
+    */
     padding: 5px;
     background-color: white;
     cursor: pointer;
@@ -27,13 +29,55 @@
   .search-result li a:active {
     color: white;
   }
-  #search-box {
-    width: 200px;
-    height: 20px;
-  }
+
   
   
   ul.search-result {
     margin-top: 0;
     padding-left: 0;
   }
+
+
+  #search-component {
+  float: right;
+}
+
+input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+#search-component button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+#search-component button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+.search-container {
+    float: none;
+  }
+input[type=text], #search-component button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+
+input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
