--- a/src/app/data-detail/data-detail.component.css
+++ b/src/app/data-detail/data-detail.component.css
@@ -23,3 +23,13 @@ h2 {
     color:rgb(11, 70, 97);
 }
 
+#chart {
+    padding: 3em;
+    text-align: center; margin-bottom: 0;
+}
+
+.back {
+    margin-top: 6em;
+    
+}
+
