--- a/src/app/data/data.component.css
+++ b/src/app/data/data.component.css
@@ -43,3 +43,8 @@
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
 }
+
+h2 {
+    text-align: center; margin-bottom: 0;
+    color:rgb(11, 70, 97);
+}
