--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
       <li>
         <a routerLink="/data">Data</a>
       </li>
+      <li>
+        <a routerLink="/files">Files</a>
+      </li>
       <app-data-search></app-data-search>
     </ul>
   </div>
